   Creative Commons, 559 Nathan Abbott Way, Stanford, California 94305,
   USA.  A summary of the license and the full legal text is included
   in file: COPYING.  If you wish to distribute some or all of this work
   under different terms, please contact respective author(s).
   The license applies to all entries newer than 2009-04-28.
*/

2012-11-30 13:12 UTC-0800 Pritpal Bedi (bedipritpal at hotmail.com)
  * hbqt/qtgui/hbqt_hbqvalidator.cpp
    + Implemented: QValidator::Intermediate return value.
       HOW: If the validating function return NIL as sole return-value 
              OR
            NIL as third element of returned array;
            QValidator::Intermediate is returned back to QValidator::validate().

2012-11-29 12:51 UTC-0800 Pritpal Bedi (bedipritpal at hotmail.com)
  * hbqt/qtgui/hbqt_hbqvalidator.cpp
    % Small fix to pass validation text to PRG callback as per STR API protocol.

2012-11-28 23:34 UTC-0800 Pritpal Bedi (bedipritpal at hotmail.com)
  * hbide/hbide_v.ch
    ! Version bump.

  * hbqt/qtgui/qth/QLineEdit.qth
    % Marked [*D=1*] for :setValidator().

  + hbqt/qtgui/qth/HBQValidator.qth
  * hbqt/qtgui/qth/filelist.hbm

  + hbqt/qtgui/hbqt_hbqvalidator.cpp
  + hbqt/qtgui/hbqt_hbqvalidator.h
  * hbqt/qtgui/hbqtgui.hbm
  * hbqt/qtgui/hbqtgui.hbx
    + Added: HBQValidator() sub-class inheriting QValidator().
       This facilitates to simulate Harbour Get System's input behavior, 
       primarily in relation to picture clause at the minimum. But it 
       is much more then that. A clever use can put you under total 
       control what exactly you want the user to input.

       SYNTAX:  oEdit := QLineEdit( oWnd )
                oEdit:setValidator( HBQValidator( {|cText, nPos| DoValidation( cText, nPos ) } ) ) 

       RETURN VALUE OF VALIDATION BLOCK:
                It is important to understand the rationale of return 
                value of code-block supplied as only parameter to 